--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <button class="btn">+</button>
 </div>
 <div class="Row">
-    <button class="Btn">0</button>
+    <button class="btn">0</button>
     <button class="btn">.</button>
     <button class="btn">=</button>
 </div>
